--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@equilibrium/cli",
+  "name": "@content-branch/equilibrium-cli",
   "description": "Equilibrium CLI",
-  "version": "0.6.4",
+  "version": "0.1.1",
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/content-branch/equilibrium-command-line-tool.git"
   },
+  "homepage": "http://localhost:3001/app/home",
   "bin": {
     "eq": "bin/run"
   },
@@ -28,6 +30,7 @@
     "equilibrium cli",
     "eq cli"
   ],
+  "author":"Andy Rand",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "oclif": {
